--- a/html/isss-project.html
+++ b/html/isss-project.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto ISSS Salud - Portafolio</title>
+    <title>Proyecto ISSS Salud - Detalles del Proyecto</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/project-detail.css">
+    <link rel="stylesheet" href="../css/project-details.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,167 +34,170 @@
     </header>
 
     <main>
-        <div class="project-detail-container">
-            <div class="project-header">
-                <div class="back-link">
-                    <a href="../index.html#projects"><i class="fas fa-arrow-left"></i> Volver a Proyectos</a>
-                </div>
+        <section class="project-details-header">
+            <div class="project-title-container">
+                <a href="../index.html#projects" class="back-link"><i class="fas fa-arrow-left"></i> Volver a Proyectos</a>
                 <h1>Proyecto ISSS Salud</h1>
-                <div class="project-links">
+                <div class="project-tags">
+                    <span>Frontend</span>
+                    <span>Backend</span>
+                    <span>Java</span>
+                    <span>Oracle</span>
+                    <span>Kotlin</span>
+                </div>
+                <div class="project-links-header">
                     <a href="https://github.com/Xx-pocasangre-xX/ISSS_Salud-Java.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> Repositorio 1
+                        <i class="fab fa-github"></i> Repositorio Java
                     </a>
                     <a href="https://github.com/xxDianaPadilla/ISSS-Salud.git" target="_blank" class="github-link">
-                        <i class="fab fa-github"></i> Repositorio 2
+                        <i class="fab fa-github"></i> Repositorio Kotlin
                     </a>
                 </div>
             </div>
+        </section>
 
-            <div class="project-banner">
-                <div class="placeholder-banner"></div>
+        <section class="project-content">
+            <div class="project-description">
+                <h2>Descripción del Proyecto</h2>
+                <p>ISSS Salud es un sistema integrado de gestión hospitalaria desarrollado para optimizar los procesos administrativos y médicos en instituciones de salud. El proyecto consta de múltiples aplicaciones interconectadas que permiten la gestión eficiente de pacientes, citas médicas, historiales clínicos, inventario de medicamentos y recursos hospitalarios.</p>
+                <p>El sistema fue desarrollado como parte de un proyecto académico/profesional donde participé como desarrollador frontend y colaborador en el backend, trabajando en estrecha colaboración con un equipo multidisciplinario.</p>
             </div>
 
-            <div class="project-content">
-                <div class="project-info-section">
-                    <h2>Descripción del Proyecto</h2>
-                    <p>ISSS Salud es un sistema integrado de gestión hospitalaria desarrollado para optimizar los procesos administrativos y médicos en instituciones de salud. El proyecto consta de múltiples aplicaciones interconectadas que permiten la gestión eficiente de pacientes, citas médicas, historiales clínicos, inventario de medicamentos y recursos hospitalarios.</p>
-                    
-                    <p>El sistema fue desarrollado como parte de un proyecto académico/profesional donde participé como desarrollador frontend y colaborador en el backend, trabajando en estrecha colaboración con un equipo multidisciplinario.</p>
-                </div>
-
-                <div class="project-info-section">
-                    <h2>Tecnologías Utilizadas</h2>
-                    <div class="tech-stack">
-                        <div class="tech-item">
-                            <i class="fab fa-java"></i>
-                            <span>Java</span>
+            <div class="project-gallery">
+                <h2>Capturas del Proyecto</h2>
+                <div class="gallery-container">
+                    <div class="gallery-item">
+                        <div class="gallery-placeholder">
+                            <div class="placeholder-text"><img src="../assets/ISSS Salud inicio.png" alt=""></div>
                         </div>
-                        <div class="tech-item">
-                            <i class="fas fa-database"></i>
-                            <span>MySQL</span>
+                    </div>
+                    <div class="gallery-item">
+                        <div class="gallery-placeholder">
+                            <div class="placeholder-text"><img src="../assets/ISSS Salud Interfaz.png" alt=""></div>
                         </div>
-                        <div class="tech-item">
-                            <i class="fas fa-desktop"></i>
-                            <span>JavaFX</span>
-                        </div>
-                        <div class="tech-item">
-                            <i class="fas fa-sitemap"></i>
-                            <span>MVC</span>
-                        </div>
-                        <div class="tech-item">
-                            <i class="fas fa-code-branch"></i>
-                            <span>Git</span>
+                    </div>
+                    <div class="gallery-item">
+                        <div class="gallery-placeholder">
+                            <div class="placeholder-text"><img src="../assets/ISSS Salud uso.png" alt=""></div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="project-info-section">
-                    <h2>Mi Contribución</h2>
-                    <ul class="contribution-list">
-                        <li>
-                            <i class="fas fa-check"></i>
-                            <div>
-                                <h3>Diseño de Interfaces</h3>
-                                <p>Diseñé e implementé interfaces intuitivas y responsivas para las diferentes aplicaciones del sistema, asegurando una experiencia de usuario coherente y accesible.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="fas fa-check"></i>
-                            <div>
-                                <h3>Desarrollo Frontend</h3>
-                                <p>Implementé los componentes interactivos de la interfaz utilizando JavaFX, siguiendo las mejores prácticas y patrones de diseño para garantizar un código mantenible y escalable.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="fas fa-check"></i>
-                            <div>
-                                <h3>Integración Backend</h3>
-                                <p>Colaboré en el desarrollo de la lógica de negocio y la integración con la base de datos, implementando consultas optimizadas y flujos de trabajo eficientes.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <i class="fas fa-check"></i>
-                            <div>
-                                <h3>Pruebas y Depuración</h3>
-                                <p>Realicé pruebas unitarias y de integración para identificar y corregir errores, garantizando la calidad y confiabilidad del sistema.</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="project-info-section">
-                    <h2>Características Principales</h2>
-                    <div class="features-grid">
-                        <div class="feature-card">
-                            <i class="fas fa-user-md"></i>
+            <div class="project-features">
+                <h2>Características Principales</h2>
+                <ul>
+                    <li>
+                        <i class="fas fa-check-circle"></i>
+                        <div>
                             <h3>Gestión de Pacientes</h3>
                             <p>Registro, actualización y seguimiento de información médica de pacientes con historial clínico completo.</p>
                         </div>
-                        <div class="feature-card">
-                            <i class="fas fa-calendar-alt"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-check-circle"></i>
+                        <div>
                             <h3>Sistema de Citas</h3>
                             <p>Programación y gestión de citas médicas con notificaciones automáticas y recordatorios.</p>
                         </div>
-                        <div class="feature-card">
-                            <i class="fas fa-pills"></i>
-                            <h3>Inventario Médico</h3>
-                            <p>Control de medicamentos y suministros con alertas de stock mínimo y seguimiento de caducidad.</p>
-                        </div>
-                        <div class="feature-card">
-                            <i class="fas fa-chart-line"></i>
+                    </li>
+                    <li>
+                        <i class="fas fa-check-circle"></i>
+                        <div>
                             <h3>Reportes y Estadísticas</h3>
                             <p>Generación de informes personalizados y visualización de datos para la toma de decisiones.</p>
                         </div>
-                    </div>
-                </div>
+                    </li>
+                </ul>
+            </div>
 
-                <div class="project-info-section">
-                    <h2>Capturas de Pantalla</h2>
-                    <div class="screenshots-grid">
-                        <div class="screenshot">
-                            <div class="placeholder-screenshot"></div>
-                            <p>Pantalla de inicio de sesión</p>
-                        </div>
-                        <div class="screenshot">
-                            <div class="placeholder-screenshot"></div>
-                            <p>Dashboard principal</p>
-                        </div>
-                        <div class="screenshot">
-                            <div class="placeholder-screenshot"></div>
-                            <p>Gestión de pacientes</p>
-                        </div>
-                        <div class="screenshot">
-                            <div class="placeholder-screenshot"></div>
-                            <p>Calendario de citas</p>
-                        </div>
+            <div class="project-tech-stack">
+                <h2>Tecnologías Utilizadas</h2>
+                <div class="tech-grid">
+                    <div class="tech-item">
+                        <i class="fab fa-java"></i>
+                        <span>Java</span>
                     </div>
-                </div>
-
-                <div class="project-info-section">
-                    <h2>Desafíos y Soluciones</h2>
-                    <div class="challenge">
-                        <h3>Integración de Múltiples Módulos</h3>
-                        <p>El principal desafío fue asegurar la comunicación fluida entre las diferentes aplicaciones del sistema. Implementamos una arquitectura modular con interfaces bien definidas y protocolos de comunicación estandarizados para garantizar la interoperabilidad.</p>
+                    <div class="tech-item">
+                        <i class="fas fa-database"></i>
+                        <span>Oracle</span>
                     </div>
-                    <div class="challenge">
-                        <h3>Rendimiento con Grandes Volúmenes de Datos</h3>
-                        <p>Optimizamos las consultas a la base de datos y utilizamos técnicas de caché para mantener tiempos de respuesta rápidos incluso con una gran cantidad de registros médicos e historiales clínicos.</p>
+                    <div class="tech-item">
+                        <i class="fas fa-desktop"></i>
+                        <span>Java with Ant</span>
                     </div>
-                </div>
-
-                <div class="project-info-section">
-                    <h2>Aprendizajes y Conclusiones</h2>
-                    <p>Este proyecto me permitió profundizar mis conocimientos en el desarrollo de aplicaciones Java, trabajando con un enfoque MVC y aplicando principios de diseño de software. También mejoré mis habilidades de trabajo en equipo y comunicación, aspectos fundamentales para coordinar esfuerzos en proyectos complejos.</p>
-                    <p>La experiencia de trabajar en un sistema integrado me dio una visión más amplia sobre la arquitectura de software y la importancia de diseñar sistemas escalables desde el inicio.</p>
+                    <div class="tech-item">
+                        <i class="fas fa-sitemap"></i>
+                        <span>MVC</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fas fa-code-branch"></i>
+                        <span>Git</span>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <div class="project-challenges">
+                <h2>Desafíos y Soluciones</h2>
+                <div class="challenge-item">
+                    <h3>Integración de Múltiples Módulos</h3>
+                    <p>El principal desafío fue asegurar la comunicación fluida entre las diferentes aplicaciones del sistema.</p>
+                    <p><strong>Solución:</strong> Implementamos una arquitectura modular con interfaces bien definidas y protocolos de comunicación estandarizados para garantizar la interoperabilidad.</p>
+                </div>
+                <div class="challenge-item">
+                    <h3>Rendimiento con Grandes Volúmenes de Datos</h3>
+                    <p>Mantener tiempos de respuesta rápidos con grandes volúmenes de registros médicos e historiales clínicos.</p>
+                    <p><strong>Solución:</strong> Optimizamos las consultas a la base de datos y utilizamos técnicas de caché para mantener tiempos de respuesta rápidos.</p>
+                </div>
+            </div>
+
+            <div class="project-role">
+                <h2>Mi Rol en el Proyecto</h2>
+                <p>Como parte del equipo de desarrollo, mis responsabilidades incluyeron:</p>
+                <ul>
+                    <li>Diseño de Interfaces: Diseñé e implementé interfaces intuitivas y responsivas para las diferentes aplicaciones del sistema.</li>
+                    <li>Desarrollo Frontend: Implementé los componentes interactivos de la interfaz utilizando Java with Ant.</li>
+                    <li>Integración Backend: Colaboré en el desarrollo de la lógica de negocio y la integración con la base de datos.</li>
+                    <li>Pruebas y Depuración: Realicé pruebas unitarias y de integración para identificar y corregir errores.</li>
+                </ul>
+            </div>
+
+            <div class="project-conclusion">
+                <h2>Aprendizajes y Conclusiones</h2>
+                <p>Este proyecto me permitió profundizar mis conocimientos en el desarrollo de aplicaciones Java, trabajando con un enfoque MVC y aplicando principios de diseño de software. También mejoré mis habilidades de trabajo en equipo y comunicación, aspectos fundamentales para coordinar esfuerzos en proyectos complejos.</p>
+                <p>La experiencia de trabajar en un sistema integrado me dio una visión más amplia sobre la arquitectura de software y la importancia de diseñar sistemas escalables desde el inicio.</p>
+            </div>
+
+            <div class="next-projects">
+                <h2>Otros Proyectos</h2>
+                <div class="next-projects-grid">
+                    <a href="hospital-project.html" class="next-project-card">
+                        <div class="next-project-image">
+                            <div class="placeholder-project"><img src="../assets/bloom salud.png" alt=""></div>
+                        </div>
+                        <div class="next-project-info">
+                            <h3>Hospital Bloom</h3>
+                            <p>Sistema de gestión hospitalaria pediátrica</p>
+                        </div>
+                    </a>
+                    <a href="workfinder-project.html" class="next-project-card">
+                        <div class="next-project-image">
+                            <div class="placeholder-project"><img src="../assets/Work Finder-1 02 Artboard 4.png" alt=""></div>
+                        </div>
+                        <div class="next-project-info">
+                            <h3>WorkFinder</h3>
+                            <p>Plataforma de búsqueda de empleo</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <div class="footer-content">
             <div class="footer-text">
-                <p>&copy; 2025 Portafolio Desarrollador. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Portafolio de Ricardo Daniel Garcia Pocasangre. Todos los derechos reservados.</p>
             </div>
             <div class="social-links">
                 <a href="#" target="_blank"><i class="fab fa-github"></i></a>
