--- a/html/workfinder-project.html
+++ b/html/workfinder-project.html
@@ -6,7 +6,7 @@
     <title>WorkFinder - Detalles del Proyecto</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/project-details.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="   https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -64,19 +64,19 @@
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
                             <!-- Aquí iría una imagen real del proyecto -->
-                            <div class="placeholder-text">Interfaz de Inicio</div>
+                            <div class="placeholder-text"><img src="../assets/WorkFinder Inicio.png" alt=""></div>
                         </div>
                     </div>
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
                             <!-- Aquí iría una imagen real del proyecto -->
-                            <div class="placeholder-text">Búsqueda de Empleos</div>
+                            <div class="placeholder-text"><img src="../assets/Work Finder Home.png" alt=""></div>
                         </div>
                     </div>
                     <div class="gallery-item">
                         <div class="gallery-placeholder">
                             <!-- Aquí iría una imagen real del proyecto -->
-                            <div class="placeholder-text">Perfil de Usuario</div>
+                            <div class="placeholder-text"><img src="../assets/Work Finder Oferta.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -120,20 +120,16 @@
                 <h2>Tecnologías Utilizadas</h2>
                 <div class="tech-grid">
                     <div class="tech-item">
-                        <i class="fab fa-html5"></i>
-                        <span>HTML5</span>
-                    </div>
-                    <div class="tech-item">
-                        <i class="fab fa-css3-alt"></i>
-                        <span>CSS3</span>
-                    </div>
-                    <div class="tech-item">
-                        <i class="fab fa-js"></i>
-                        <span>JavaScript</span>
+                        <i class="fas fa-file-code"></i>
+                        <span>Kotlin</span>
                     </div>
                     <div class="tech-item">
                         <i class="fas fa-mobile-alt"></i>
                         <span>Responsive Design</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fa-brands fa-figma"></i>
+                        <span>Figma</span>
                     </div>
                 </div>
             </div>
@@ -157,8 +153,7 @@
                 <p>Como principal responsable del frontend, me encargué de:</p>
                 <ul>
                     <li>Diseño y maquetación de todas las interfaces de usuario</li>
-                    <li>Implementación de estilos CSS responsivos</li>
-                    <li>Creación de componentes interactivos con JavaScript</li>
+                    <li>Creación de componentes interactivos en Figma</li>
                     <li>Definición de la experiencia de usuario y flujos de navegación</li>
                     <li>Optimización para diferentes dispositivos y navegadores</li>
                 </ul>
@@ -175,7 +170,7 @@
                 <div class="next-projects-grid">
                     <a href="isss-project.html" class="next-project-card">
                         <div class="next-project-image">
-                            <div class="placeholder-project"></div>
+                            <div class="placeholder-project"><img src="../assets/LOGO AZUL.png" alt=""></div>
                         </div>
                         <div class="next-project-info">
                             <h3>ISSS Salud</h3>
@@ -184,7 +179,7 @@
                     </a>
                     <a href="hospital-project.html" class="next-project-card">
                         <div class="next-project-image">
-                            <div class="placeholder-project"></div>
+                            <div class="placeholder-project"><img src="../assets/bloom salud.png" alt=""></div>
                         </div>
                         <div class="next-project-info">
                             <h3>Hospital Bloom</h3>
@@ -199,7 +194,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-text">
-                <p>&copy; 2025 Portafolio Desarrollador. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Portafolio de Ricardo Daniel Garcia Pocasangre. Todos los derechos reservados.</p>
             </div>
             <div class="social-links">
                 <a href="#" target="_blank"><i class="fab fa-github"></i></a>
